--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,700,600,300);
 @import "mixins/medias";
 @import "modules/home/home";
+@import "modules/signin/signin-with-email";
 @import "components/bottom-button";
 
 * {
@@ -14,4 +15,38 @@ main {
   padding: 0;
   height: 100%;
   min-height: 100%;
+
+  > div {
+    height: 100%;
+    padding: 30px;
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+input {
+  outline: none;
+}
+
+::-webkit-input-placeholder {
+  color: rgba(255,255,255,0.4);
+}
+
+:-moz-placeholder { /* Firefox 18- */
+  color: rgba(255,255,255,0.4);
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+  color: rgba(255,255,255,0.4);
+}
+
+:-ms-input-placeholder {
+  color: rgba(255,255,255,0.4);
 }
