--- a/src/modules/signin/templates/get-user-name.html
+++ b/src/modules/signin/templates/get-user-name.html
@@ -1,5 +1,5 @@
-<div class="signin-with-email">
-    <a ng-href="signin-with-email" class="back" title="back"> <span class="gv-angle-left"></span> back</a>
+<div class="signin-with-email form">
+    <a ng-href="#!/try-on" class="back" title="back"> <span class="gv-angle-left"></span></a>
     <label for="user.name">
         Hey There!<br/>
         What's your name</label>
