--- a/src/css/components/_bottom-button.scss
+++ b/src/css/components/_bottom-button.scss
@@ -7,7 +7,7 @@
   height: 50px;
   width: calc(100% - 60px);
   display: block;
-  color: #47C8DE;
+  color: #000;
   bottom: 30px;
   font-size: 14px;
   text-transform: uppercase;
