--- a/src/css/modules/home/_home.scss
+++ b/src/css/modules/home/_home.scss
@@ -3,7 +3,7 @@
   height: 100%;
   width: 100%;
 
-  background: url("../images/bg-home.png") no-repeat top center;
+  background: url("../images/bg-home.png") no-repeat bottom center;
   background-size: cover;
   box-sizing: border-box;
   padding: 30px;
