Calculating goal monthly and saving and returning a list of goals

--- a/src/css/components/_bottom-button.scss
+++ b/src/css/components/_bottom-button.scss
@@ -18,6 +18,11 @@
   box-shadow: rgba(255,255,255,0.5) 0 3px 3px;
   font-weight: bold;
 
+  &.static {
+    position: static;
+    width: 100%;
+  }
+
   @include middle-smartphones-portrait {
     height: 60px;
     line-height: 60px;
