--- a/src/modules/goals/templates/goal-months.html
+++ b/src/modules/goals/templates/goal-months.html
@@ -1,12 +1,12 @@
 <div class="goals form">
-    <label for="goal.months">
+    <label class="title" for="goal.months">
         Wait! How much time do you have to reach this goal?
     </label>
 
 
     <div class="row">
         <div class="col-xs-5">
-            <input id="goal.months" type="number" name="goal.months" ng-model="goal.months" placeholder="12" />
+            <input clear-on-focus id="goal.months" type="number" name="goal.months" ng-model="goal.months" placeholder="12" />
         </div>
         <div class="col-xs-7">
             Months
