--- a/src/css/modules/goals/_goals.scss
+++ b/src/css/modules/goals/_goals.scss
@@ -7,17 +7,66 @@
 
   &.form {
     label {
-      color: rgba(255,255,255,0.8);
-
-      .highlight {
-        color: #FFF;
-      }
     }
 
     input[type="text"],
     input[type="number"] {
       border-bottom: solid 2px #FFF;
       color: #1D807A;
+    }
+  }
+}
+
+.goal-list {
+  background: #ffc464;
+
+  ul.my-goals {
+    padding: 0;
+
+    li.goal-card {
+      background: #FFF;
+      padding: 15px;
+      box-sizing: border-box;
+      border-radius: 4px;
+      list-style: none;
+      width: 100%;
+      display: block;
+      margin-bottom: 15px;
+      box-shadow: rgba(255,255,255,0.5) 0 3px 3px;
+
+      .goal-name {
+        font-size: 18px;
+        text-transform: uppercase;
+        color: #000;
+        font-weight: bold;
+
+        @include middle-smartphones-portrait {
+          font-size: 20px;
+        }
+
+        @include big-smartphones-portrait {
+          font-size: 24px;
+        }
+      }
+
+      p {
+        color: #000;
+        font-size: 14px;
+
+        @include middle-smartphones-portrait {
+          font-size: 16px;
+        }
+
+        @include big-smartphones-portrait {
+          font-size: 18px;
+        }
+
+        .goal-value,
+        .goal-months,
+        .goal-monthly-value {
+          color: #45CCBB;
+        }
+      }
     }
   }
 }
