--- a/src/modules/goals/templates/goal-name.html
+++ b/src/modules/goals/templates/goal-name.html
@@ -1,9 +1,9 @@
 <div class="goals form">
-    <label for="goal.name">
+    <label class="title" for="goal.name">
         Hi <span class="highlight">{{::user.name}}</span> :)<br/>
         What will be your next goal?
     </label>
-    <input id="goal.name" type="text" name="goal.name" ng-model="goal.name" placeholder="Trip around the world!" />
+    <input clear-on-focus id="goal.name" type="text" name="goal.name" ng-model="goal.name" placeholder="Trip around the world!" />
 
     <a ng-click="next();" title="Next" class="bottom-button">Next</a>
 </div>
