--- a/src/modules/signin/templates/get-user-name.html
+++ b/src/modules/signin/templates/get-user-name.html
@@ -1,9 +1,9 @@
 <div class="signin-with-email form">
     <a ng-href="#!/try-on" class="back" title="back"> <span class="gv-angle-left"></span></a>
-    <label for="user.name">
+    <label class="title" for="user.name">
         Hey There!<br/>
         What's your name</label>
-    <input id="user.name" type="text" name="user.name" ng-model="user.name" placeholder="Joseph Murphy" />
+    <input clear-on-focus id="user.name" type="text" name="user.name" ng-model="user.name" placeholder="Joseph Murphy" />
 
     <a ng-click="next();" title="Next" class="bottom-button">Next</a>
 </div>
