--- a/src/modules/signin/templates/signin-with-email.html
+++ b/src/modules/signin/templates/signin-with-email.html
@@ -1,9 +1,9 @@
 <div class="signin-with-email form">
     <a href="#!/" class="back" title="back"> <span class="gv-angle-left"></span></a>
-    <label for="user.email">
+    <label class="title" for="user.email">
         Hey There!<br/>
         What's your e-mail?</label>
-    <input id="user.email" type="email" name="user.email" ng-model="user.email" placeholder="its.me.mario@world.com" />
+    <input clear-on-focus id="user.email" type="email" name="user.email" ng-model="user.email" placeholder="its.me.mario@world.com" />
 
     <a ng-click="next();" title="Next" class="bottom-button">Next</a>
 </div>
